--- a/jupyterlab/config.json
+++ b/jupyterlab/config.json
@@ -6,7 +6,7 @@
   "url": "https://github.com/hassio-addons/addon-jupyterlab",
   "ingress": true,
   "panel_icon": "mdi:flask-outline",
-  "arch": ["aarch64", "amd64"],
+  "arch": ["aarch64", "amd64", "armv7"],
   "homeassistant_api": true,
   "map": ["config:rw", "share:rw"],
   "options": {
